update-manager (1:0.67) gutsy; urgency=low

  * UpdateManager/UpdateManager.py,
    tests/test_update_origin.py:
    - when checking for update category (Security, Important, ...)
      not only check candidateVersion but all intermediate versions
      too
    - added test for the new matcher behaviour


 --

update-manager (1:0.66) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - support listing and fetching of upgrade PreRequists
    - transition archive.canonical.com to new layout
    - mark evms as obsolete if it is not in use
    - transition powerpc users to ports.ubuntu.com
    - implement Depends checking for the selected
      View
  (as speced in https://wiki.ubuntu.com/UpgradePrerequisites)
  * DistUpgrade/Core/DistUpgradeFetcherCore.py:
    - added ignore-time-conflict when calling gpg (thanks to
      Evan)
  * utils/demoted.cfg, DistUpgrade/mirrors.cfg, 
    DistUpgrade/ReleaseAnnouncement:
    - updated for current gutsy 
  * DistUpgrade/DistUpgrade.cfg:
    - mark desktop-effects as obsolete on ubuntu-desktop upgrades
      (the appearance capplet replaces it)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jul 2007 10:57:02 +0100

update-manager (1:0.65) gutsy; urgency=low

  * debian/rules:
    - add test for fetching the upgrader to release to
      arch-build target
  * update-manager.py:
    - fix breakage in "partial upgrade" mode

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 25 Jun 2007 12:19:59 +0200

update-manager (1:0.64) gutsy; urgency=low

  * UpdateManager/DistUpgradeFetcher.py:
    - add missing "import os"
  * update-manager.py:
    - fix incorrect STEP_FETCH_INSTALL import (Fixes LP:#120484)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Jun 2007 11:49:28 +0200

update-manager (1:0.63) gutsy; urgency=low

  * fix i18n issue (Fixes LP:#114207)
  * DistUpgrade/DistUpgradeCache.py:
    - if "386" (UP) kernel is installed on SMP machine, automatically 
      switch to SMP kernel (Fixes LP: #106387)