@@ -50,6 +50,7 @@ ValidMirrors = mirrors.cfg
 
 ;[PreRequists]
 ;Packages=release-upgrader-apt,release-upgrader-dpkg
+;Packages=release-upgrader-dpkg
 ;SourcesList=prerequists-sources.list
 
 [Network]
