@@ -1,2 +1,3 @@
 # sources.list fragment for pre-requists
-deb http://archive.ubuntu.com/ubuntu feisty-backports main/debian-installer
+#deb http://archive.ubuntu.com/ubuntu feisty-backports main/debian-installer
+deb http://archive.dogfood.launchpad.net/ubuntu dapper-backports main/debian-installer
