@@ -6,7 +6,9 @@ update-manager (1:0.67) gutsy; urgency=low
       not only check candidateVersion but all intermediate versions
       too
     - added test for the new matcher behaviour
-
+  * DistUpgrade/DistUpgradeControler.py:
+    - fix PreRequists fetching 
+    - better error checking/logging
 
  --
 
